profile bg change

--- a/profile_card/resources/style.css
+++ b/profile_card/resources/style.css
@@ -12,7 +12,7 @@ body {
     231deg,
     #020024 0%,
     #00ff2f 0%,
-    #064e01 90%
+    #12800a 90%
   );
   
 }
@@ -28,7 +28,7 @@ h2, h3{
     font-weight: 700;
 }
 h2{
-    color: #00ff2f;
+    color: #6dff87;
 }
 h3{
     color: #beffca;
